--- a/doc-src/module-toc.html
+++ b/doc-src/module-toc.html
@@ -6,14 +6,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=EUC-JP" />
-    <title>モジュール</title>
+    <title>モジュール一覧 - Tiarra Documentation</title>
     <link rel="stylesheet" type="text/css" href="default.css" />
   </head>
   <body>
-    
-    <h1>モジュール</h1>
 
-    <p>[ここにモジュール全般についての説明を入れる]</p>
+    <h1>モジュール一覧</h1>
 
     <ul class="toc-group">
       <!begin:toc-group>
@@ -21,14 +19,11 @@
 	<a href="<&group-path>"><&group-name></a> <span class="group-description"><&description></span>
 	<ul class="toc-individual">
 	  <!begin:toc-individual>
-	  <li><a href="<&group-path>#<&mod-name>"><&mod-name></a> <span class="module-description"><&description></span></li>
+	  <li><a href="<&group-path>#module-<&mod-name>"><&mod-name></a> <span class="module-description"><&description></span></li>
 	  <!end:toc-individual>
 	</ul>
       </li>
       <!end:toc-group>
     </ul>
-
-    <p>[ここにも適当になんか入れとく]</p>
-
   </body>
 </html>
